--- a/client.html
+++ b/client.html
@@ -61,17 +61,15 @@
       letter-spacing: 0.5px;
     }
 
-    /* Main content */
-    .main-content {
-      flex: 1;
-      padding: 1.2rem;
-      margin-bottom: 85px;
-    }
-
-    .topbar h1 {
-      margin: 0 0 1rem 0;
-      font-size: 1.6rem;
-      font-weight: 600;
+    /* Scrollable card container */
+    .card-container {
+      position: fixed; /* so header/nav stay fixed */
+      top: 70px; /* height of header */
+      bottom: 70px; /* leave space for nav */
+      left: 0;
+      right: 0;
+      padding: 1rem;
+      overflow-y: auto; /* enable scrolling */
     }
 
     .content-box {
@@ -82,6 +80,7 @@
       -webkit-backdrop-filter: blur(12px);
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+      margin-bottom: 1rem; /* spacing between boxes */
     }
 
     .content-box:hover {
@@ -92,7 +91,7 @@
     /* Bottom Nav (floating style) */
     nav {
       position: fixed;
-      bottom: 2px;
+      bottom: 0;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
@@ -102,14 +101,15 @@
       border-top-left-radius: 40px;
       border-top-right-radius: 40px;
       display: flex;
-      justify-content: space-between; /* equal gaps */
+      justify-content: space-between;
       align-items: center;
-      padding: 0 1rem; /* keep some padding on sides */
+      padding: 0 1rem;
       box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+      z-index: 10;
     }
 
     nav a {
-      flex: 1;                      /* ⬅ each link takes equal width */
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -119,7 +119,6 @@
       font-size: 0.8rem;
       transition: color 0.2s ease, transform 0.2s ease;
     }
-
 
     nav a i {
       font-size: 1.3rem;
@@ -132,7 +131,6 @@
       font-weight: bold;
     }
 
-
     /* Special QR button */
     .qr-nav {
       background: #ffcc66;
@@ -143,12 +141,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
-      position: absolute;   /* ⬅ instead of relative */
-      left: 83%;            /* push to middle */
-      transform: translateX(-50%) translateY(-25%); /* perfectly centered */
+      position: absolute;
+      right: 13.5%;
+      transform: translateX(50%) translateY(-25%);
       bottom: 90px;
-
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       transition: transform 0.25s ease;
     }
@@ -215,7 +211,6 @@
       to {transform: scale(1); opacity: 1;}
     }
   </style>
-
 </head>
 <body>
 
@@ -229,18 +224,32 @@
     </div>
   </header>
 
-  <!-- Main content -->
-  <main class="main-content">
-    <header class="topbar">
-      <h1>Welcome Aliss!</h1>
-    </header>
-
+  <!-- Scrollable card container -->
+  <div class="card-container">
     <section>
       <div class="content-box">
-        <p>Welcome to UniDrop! This layout is <b>mobile-only</b> with UniDrop branding at the top and navigation at the bottom.</p>
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 2: This card demonstrates spacing and scrolling.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 3: Scrollable container only.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 4: Add as many cards as you want here.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 5: Scroll down to see more content.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 6: Header and nav stay fixed.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 7: Perfect for multiple sections.</p>
       </div>
     </section>
-  </main>
+  </div>
 
   <!-- Bottom Nav -->
   <nav>
@@ -281,7 +290,6 @@
       }
     });
   </script>
+
 </body>
 </html>
-
-Can you do the scrolling thing you did in clientchat into here, I want the mobile header and nav to not move as well
