--- a/client.html
+++ b/client.html
@@ -142,7 +142,7 @@
       justify-content: center;
       align-items: center;
       position: absolute;
-      right: 13.5%;
+      right: 195px;
       transform: translateX(50%) translateY(-25%);
       bottom: 90px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
@@ -293,3 +293,4 @@
 
 </body>
 </html>
+
