--- a/clientprofile.html
+++ b/clientprofile.html
@@ -134,7 +134,7 @@
     }
 
     .logout-btn {
-      background: #ff4c61;
+      background: linear-gradient(90deg, #6f1ab6, #9a33db);
       color: white;
     }
 
