--- a/client.html
+++ b/client.html
@@ -24,6 +24,7 @@
 
     /* Top header */
     .mobile-header {
+      position: sticky;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -293,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
