--- a/client.html
+++ b/client.html
@@ -17,9 +17,10 @@
       font-family: 'Roboto', Arial, sans-serif;
       background: linear-gradient(180deg, #2a0845, #20002c);
       color: white;
+      height: 100vh;        /* full viewport height */
+      overflow: hidden;     /* prevent body scroll */
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
     }
 
     /* Top header */
@@ -293,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
