--- a/clientchat.html
+++ b/clientchat.html
@@ -31,7 +31,7 @@
     .mobile-header {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
       border-bottom-left-radius: 30px;
