--- a/clientchat.html
+++ b/clientchat.html
@@ -76,6 +76,7 @@
       border-radius: 10px;
       cursor: pointer;
       font-weight: 600;
+      right: 10px;
     }
 
     /* Scrollable chat container */
