--- a/clientchat.html
+++ b/clientchat.html
@@ -45,7 +45,7 @@
       display: flex;
       align-items: center;
       gap: 0.6rem;
-      transition: opacity 0.2s;
+      transition: opacity 0.1s ease;
     }
 
     .header-inner.hidden {
@@ -86,7 +86,12 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      transition: opacity 0.2s;
+      transition: opacity 0.1s ease;
+    }
+
+    #deleteSelected.visible {
+      opacity: 1;
+      pointer-events: auto;
     }
 
     /* Scrollable chat container */
@@ -306,7 +311,7 @@
 
         // Switch header
         headerInner.classList.add("hidden");
-        deleteSelected.style.display = "block";
+        deleteSelected.style.display = "visible";
       }, 600);
     });
 
@@ -318,7 +323,7 @@
       const id = selectedMessage.dataset.id;
       await db.collection("chat").doc(id).delete();
       selectedMessage = null;
-      deleteSelected.style.display = "none";
+      deleteSelected.style.display = "visible";
       headerInner.classList.remove("hidden");
     });
 
