--- a/client.html
+++ b/client.html
@@ -256,7 +256,7 @@
   <nav>
     <a href="client.html" class="active"><i class="fa-solid fa-house"></i><span>Home</span></a>
     <a href="clientchat.html"><i class="fa-solid fa-comment-dots"></i><span>Chat</span></a>
-    <a href="#"><i class="fa-solid fa-qrcode"></i><span>QR</span></a>
+    <a href="clientQR.html"><i class="fa-solid fa-qrcode"></i><span>QR</span></a>
     <a href="clientprofile.html"><i class="fa-solid fa-user"></i><span>Profile</span></a>
     <a href="settings.html"><i class="fa-solid fa-gear"></i><span>Settings</span></a>
   </nav>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
