--- a/clientprofile.html
+++ b/clientprofile.html
@@ -18,25 +18,27 @@
       background: linear-gradient(180deg, #2a0845, #20002c);
       color: white;
       height: 100vh;
+      overflow: hidden; /* no scrolling */
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      overflow: hidden; /* prevent scrolling */
     }
 
     /* Fixed Top Header */
     .mobile-header {
+      position: fixed;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 97.5%;
       display: flex;
       align-items: center;
-      width: 97.5%;
       justify-content: center;
       background: linear-gradient(90deg, #6f1ab6, #9a33db);
       padding: 0.85rem 1.2rem;
-      border-bottom: none;
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      z-index: 20;
     }
 
     .header-inner {
@@ -65,16 +67,17 @@
       letter-spacing: 0.5px;
     }
 
-    /* Main content centered between header & nav */
+    /* Main content fixed in between header & nav */
     .main-content {
-      flex: 1;
-      margin-top: 100px;  /* push below header */
-      margin-bottom: 90px; /* push above nav */
+      position: fixed;
+      top: 90px;   /* space below header */
+      bottom: 80px; /* space above nav */
+      left: 0;
+      right: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* vertical centering */
-      width: 100%;
+      justify-content: center;
       padding: 1rem;
       box-sizing: border-box;
     }
