--- a/client.html
+++ b/client.html
@@ -207,21 +207,23 @@
   <div class="card-container">
     <section>
       <div class="content-box">
-        <p><strong>Welcome to UniDrop! 📦</strong></p>
-        <ol>
-          <li>Register your account on the UniDrop website.</li>
-          <li>Get your UniDrop ID from the website.</li>
-          <li>When shopping online, add your UniDrop ID after your name.<br>
-              👉 Example: &lt;Name&gt;&lt;UniDrop ID&gt;</li>
-          <li>Once your package arrives, you’ll receive a WhatsApp notification.</li>
-          <li>Click the link in WhatsApp to go to the UniDrop website.</li>
-          <li>Sign in to your account.</li>
-          <li>Tap <strong>“QR”</strong> to get your verification QR code.</li>
-          <li>Scan your QR at the UniDrop hub to retrieve your parcel. 🎁</li>
-        </ol>
-        <p>🚀 That’s it! Fast & secure parcel collection with UniDrop.</p>
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
       </div>
-
+      <div class="content-box">
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
+      </div>
+      <div class="content-box">
+        <p>Card 1: Welcome to UniDrop! Mobile-only layout.</p>
+      </div>
       
       
     </section>
