--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       height: 100vh;
       overflow: hidden; /* make page unscrollable */
       gap: 1rem;
+      transform: translateY(-50px)
     }
 
     /* Branding row (logo + name side by side) */
