--- a/index.html
+++ b/index.html
@@ -3,173 +3,203 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>UniDrop - Sign In</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-
+  <title>Register - UniDrop</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Roboto', Arial, sans-serif;
-      background: linear-gradient(180deg, #2a0845, #20002c);
-      color: white;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #f9f9f9;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: flex-start;
       height: 100vh;
-      overflow: hidden; /* make page unscrollable */
-      gap: 1rem;
-      transform: translateY(-80px)
+      overflow-x: hidden;
     }
 
-    /* Branding row (logo + name side by side) */
-    .branding {
+    /* Top curved purple header */
+    .header {
+      width: 100%;
+      height: 150px;
+      background: linear-gradient(135deg, #6f1ab6, #a349d7);
+      border-bottom-left-radius: 100px;
+      border-bottom-right-radius: 100px;
       display: flex;
-      align-items: center;
       justify-content: center;
-      gap: 0.8rem;
+      align-items: center;
+      position: relative;
     }
 
-    .branding img {
-      width: 70px;
-      height: 70px;
-      border-radius: 20%;
-      object-fit: cover;
+    .header img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background: white;
+      padding: 10px;
+      margin-top:150px;
     }
 
-    .branding h1 {
-      font-size: 2rem;
-      margin: 0;
-      font-weight: 700;
-    }
-
-    .signin-container {
-      width: 80%;
-      max-width: 250px;
-      background: #3c1f60;
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
-      display: flex;
-      flex-direction: column;
-      gap: 1.2rem;
-    }
-
-    .signin-header {
+    /* Form container */
+    .form-container {
+      width: 90%;
+      height:50%;
+      max-width: 350px;
+      margin-top: 1px; /* overlap avatar with header */
+      background: #fff;
+      border-radius: 15px;
+      padding: 50px;
+      padding-top: 60px;
+      padding-bottom: 60px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       text-align: center;
     }
 
-    .signin-header h2 {
-      font-weight: 700;
-      font-size: 1.3rem;
-      margin: 0;
+    .form-container h2 {
+      margin-bottom: 20px;
+      color: #6f1ab6;
     }
 
-    .input-group {
+    .input-box {
       display: flex;
       align-items: center;
-      background: #2a0845;
+      background: #f1f1f1;
       border-radius: 10px;
-      padding: 0.6rem 0.9rem;
-      gap: 0.6rem;
+      padding: 10px;
+      margin-bottom: 15px;
     }
 
-    .input-group i {
-      color: #9a33db;
-      font-size: 1.1rem;
-    }
-
-    .input-group input {
+    .input-box input {
       border: none;
       outline: none;
+      background: none;
       flex: 1;
-      background: transparent;
-      color: white;
+      padding: 5px;
       font-size: 1rem;
     }
 
-    .signin-btn {
-      background: linear-gradient(90deg, #6f1ab6, #9a33db);
+    .input-box i {
+      color: #6f1ab6;
+      margin-right: 8px;
+    }
+
+    .form-container button {
+      width: 100%;
+      padding: 12px;
       border: none;
-      padding: 0.8rem;
-      border-radius: 12px;
-      font-size: 1.1rem;
-      font-weight: 600;
+      border-radius: 10px;
+      background: #6f1ab6;
       color: white;
+      font-size: 1rem;
       cursor: pointer;
-      transition: 0.2s;
+      margin-top: 10px;
+      transition: 0.3s;
     }
 
-    .signin-btn:hover {
-      opacity: 0.9;
+    .form-container button:hover {
+      background: #531289;
     }
 
-    .extra-links {
-      text-align: center;
-      font-size: 0.9rem;
-      color: white;
+    .links {
+      display: flex;
+      justify-content: space-between;
+      font-size: 0.85rem;
+      margin: 10px 0;
     }
 
-    .extra-links a {
-      color: #ffffff;
+    .links a {
       text-decoration: none;
-      margin: 0 0.5rem;
+      color: #6f1ab6;
+      font-weight: 500;
     }
 
-    .extra-links a:hover {
-      text-decoration: underline;
+    .divider {
+      display: flex;
+      align-items: center;
+      margin: 15px 0;
+      color: #aaa;
+    }
+
+    .divider::before,
+    .divider::after {
+      content: "";
+      flex: 1;
+      height: 1px;
+      background: #ddd;
+      margin: 0 10px;
+    }
+
+    .signup {
+      font-size: 0.9rem;
+    }
+
+    .signup a {
+      color: #6f1ab6;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    /* dots navigation mock */
+    .dots {
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+      gap: 8px;
+    }
+
+    .dots span {
+      width: 10px;
+      height: 10px;
+      background: #ccc;
+      border-radius: 50%;
+      display: inline-block;
+    }
+
+    .dots span.active {
+      background: #6f1ab6;
     }
   </style>
+  <!-- For icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <!-- Logo + App Name side by side -->
-  <div class="branding">
-    <img src="logotry.gif" alt="UniDrop Logo">
-    <h1>UniDrop</h1>
+  <!-- Header with avatar -->
+  <div class="header">
+    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="avatar">
   </div>
 
-  <!-- Sign-in Card -->
-  <div class="signin-container">
-    <div class="signin-header">
-      <h2>Welcome Back</h2>
+  <!-- Form -->
+  <div class="form-container">
+    <h2>Log In</h2>
+
+    <div class="input-box">
+      <i class="fa fa-user"></i>
+      <input type="text" placeholder="Enter your username">
     </div>
 
-    <div class="input-group">
-      <i class="fa-solid fa-envelope"></i>
-      <input type="email" placeholder="Email" id="email">
+    <div class="input-box">
+      <i class="fa fa-lock"></i>
+      <input type="password" placeholder="Password">
     </div>
 
-    <div class="input-group">
-      <i class="fa-solid fa-lock"></i>
-      <input type="password" placeholder="Password" id="password">
+    <button>Log In</button>
+
+    <div class="links">
+      <a href="#">Forget Password?</a>
+      <a href="#">Need help?</a>
     </div>
 
-    <button class="signin-btn" id="signinBtn">Sign In</button>
+    <div class="divider">or</div>
 
-    <div class="extra-links">
-      <a href="#">Forgot Password?</a> • <a href="#">Sign Up</a>
+    <div class="signup">
+      Don’t have an account? <a href="#">Sign Up</a>
+    </div>
+
+    <div class="dots">
+      <span class="active"></span>
+      <span></span>
+      <span></span>
     </div>
   </div>
-
-  <script>
-    // Redirect to client.html when button clicked
-    document.getElementById("signinBtn").addEventListener("click", () => {
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-
-      if(email === "" || password === "") {
-        alert("Please enter both email and password.");
-        return;
-      }
-
-      // If email & password entered, redirect to client.html
-      window.location.href = "client.html";
-    });
-  </script>
 </body>
 </html>
