--- a/index.html
+++ b/index.html
@@ -1,1 +1,205 @@
-      height:100px;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Register - UniDrop</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
+      overflow-x: hidden;
+    }
+
+    /* Top curved purple header */
+    .header {
+      width: 100%;
+      height: 150px;
+      background: linear-gradient(135deg, #6f1ab6, #a349d7);
+      border-bottom-left-radius: 50%;
+      border-bottom-right-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    .header img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background: white;
+      padding: 10px;
+      margin-top:150px;
+    }
+
+    /* Form container */
+    .form-container {
+      width: 100%;
+      height:60%;
+      max-width: 350px;/* overlap avatar with header */
+      background: #fff;
+      border-bottom-right-radius: 15px;
+      border-bottom-left-radius: 15px;
+      padding: 50px;
+      padding-top: 60px;
+      padding-bottom: 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .form-container h2 {
+      margin-bottom: 20px;
+      color: #6f1ab6;
+    }
+
+    .input-box {
+      display: flex;
+      align-items: center;
+      background: #f1f1f1;
+      border-radius: 10px;
+      padding: 10px;
+      margin-bottom: 15px;
+    }
+
+    .input-box input {
+      border: none;
+      outline: none;
+      background: none;
+      flex: 1;
+      padding: 5px;
+      font-size: 1rem;
+    }
+
+    .input-box i {
+      color: #6f1ab6;
+      margin-right: 8px;
+    }
+
+    .form-container button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 10px;
+      background: #6f1ab6;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      margin-top: 10px;
+      transition: 0.3s;
+    }
+
+    .form-container button:hover {
+      background: #531289;
+    }
+
+    .links {
+      display: flex;
+      justify-content: space-between;
+      font-size: 0.85rem;
+      margin: 10px 0;
+    }
+
+    .links a {
+      text-decoration: none;
+      color: #6f1ab6;
+      font-weight: 500;
+    }
+
+    .divider {
+      display: flex;
+      align-items: center;
+      margin: 15px 0;
+      color: #aaa;
+    }
+
+    .divider::before,
+    .divider::after {
+      content: "";
+      flex: 1;
+      height: 1px;
+      background: #ddd;
+      margin: 0 10px;
+    }
+
+    .signup {
+      font-size: 0.9rem;
+    }
+
+    .signup a {
+      color: #6f1ab6;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    /* dots navigation mock */
+    .dots {
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+      gap: 8px;
+    }
+
+    .dots span {
+      width: 10px;
+      height: 10px;
+      background: #ccc;
+      border-radius: 50%;
+      display: inline-block;
+    }
+
+    .dots span.active {
+      background: #6f1ab6;
+    }
+  </style>
+  <!-- For icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+  <!-- Header with avatar -->
+  <div class="header">
+    <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="avatar">
+  </div>
+
+  <!-- Form -->
+  <div class="form-container">
+    <h2>Log In</h2>
+
+    <div class="input-box">
+      <i class="fa fa-user"></i>
+      <input type="text" placeholder="Enter your username">
+    </div>
+
+    <div class="input-box">
+      <i class="fa fa-lock"></i>
+      <input type="password" placeholder="Password">
+    </div>
+
+    <button>Log In</button>
+
+    <div class="links">
+      <a href="#">Forget Password?</a>
+      <a href="#">Need help?</a>
+    </div>
+
+    <div class="divider">or</div>
+
+    <div class="signup">
+      Don’t have an account? <a href="#">Sign Up</a>
+    </div>
+
+    <div class="dots">
+      <span class="active"></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+</body>
+</html>
