--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      margin-top: 60px;
+      padding: 50px;
+      padding-top: 50px;
+      
     }
 
     .form-container h2 {
@@ -146,8 +148,8 @@
     .dots {
       display: flex;
       justify-content: center;
-      margin-top: auto; /* push dots to bottom */
-      gap: 8px;
+      margin-top: 30px; /* push dots to bottom */
+      gap: 3px;
     }
 
     .dots span {
