--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="divider">or</div>
 
     <div class="signup">
-      Don’t have an account? <a href="#">Sign Up</a>
+      Don’t have an account? <a href="signup.html">Sign Up</a>
     </div>
 
     <div class="dots">
