--- a/signup.html
+++ b/signup.html
@@ -195,7 +195,7 @@
     <div class="divider">or</div>
 
     <div class="signup">
-      Already have an account? <a href="#">Log In</a>
+      Already have an account? <a href="index.html">Log In</a>
     </div>
 
     <div class="dots">
